@@ -16,7 +16,7 @@ DIST gitlab-ce-8.11.3.tar.gz 25701850 SHA256 23dc756ae148074701acaefcc686a66ccf7
 DIST gitlab-ce-8.11.4.tar.gz 25704666 SHA256 c8d94888b4f7aabaab2d548926935edf0fc284277006e284424e202122b072a3 SHA512 dc4f2dfaabe95ecea1202da8e1af6d850281146faa7ed2c522c34abd0167f9ff4b4807fca76a61fc2f607126efedca552652474edf552f2848d797f92b5b1ef2 WHIRLPOOL 30b2a46e3b3a4503fd1a1cc68eb2709b76067068550729fe45b9a4b3917cfac08932da689743744c03041a7b705432a4f601fb6a1e2d81a897cc035197e90b5f
 DIST gitlab-ce-8.11.5.tar.gz 25704701 SHA256 5a0de2cdcb97396d8174ad49126e67829df47a2abf1831439186ae443e692662 SHA512 961dad680e4a7a158e316ac66e29ff42bb4f065796fcf360c6cba4c102eb67a240ea188a8ef1164608e05a3d6c5e04790ecc73ea2f2e5cc89766a2751b108532 WHIRLPOOL 35c1e8f7ba2f9fba159cd182c97f0d14f17b289e6e238027beccd9f805fa8622a353c507a56a9ec8d81bc64698fd35fc2cd0ad73c35a86a03cb894c62b458848
 DIST gitlab-ce-8.11.6.tar.gz 25705796 SHA256 354da5db4087ce80d9f43cbae87830ccd06c2c559f8dfb764dffd7420588a66b SHA512 5abda185bfbbad61060ac9b5e83101d88f0f6c8cc12580c71467c7bfdc380d60acc9a8a855ac448759c8be9a5297ba721d0e641ec144741a7c57dd038e13b269 WHIRLPOOL 046ecd777cebc8768c9cdefab7f782c7943403e0c5c6b963ee2359f10f446b5cbe6974d07e14a3089c79830722de6d1e965fa2a58316e75a280ddf09825a1fe6
-DIST gitlab-ce-8.12.0_rc4.tar.gz 25972671 SHA256 0f5efaeb934819ff29d886534adb42b4c6acc910aa4c611315898f851f2b54fe SHA512 5a4b02cabdbb943e3a7092669b54d8ea4f0bb9336269c1edd4d52b5d4f37623097825d6602b33f33dd25c70e96da7ff595b010c868edf1ebf355bf975045718e WHIRLPOOL 6d7184bf9b3b4f51778dec2e6febb8cd16f1a0c23afcf033684f405280088069d5b1ea9a67ffd22ef4326724507c97a969a6d413c39ed07299bc27ad42c44dd9
+DIST gitlab-ce-8.12.0_rc6.tar.gz 26786541 SHA256 41719da8de79093accae302c0cb7082e3e4248ed2413f6cda456051fead1f05c SHA512 e5c6ea64e3fc495c41dfe405325caf3fb34e58416d6cf284805f3e9666b085f4ef58b97e0de04ded4cf658421d8e4b716781f9ce58465410a7a715e72800feaf WHIRLPOOL b29ae1c37f71e4474077f18fe42f07bca213f7cf6faa2f942b615430aa68245a43a6223e430926c1b917debff548fd6d6b8c3f5c6e4e7ddd121878e2c390e9ba
 EBUILD gitlab-ce-8.10.6.ebuild 11710 SHA256 1659a2e43491488fa6fbbee1699cc4138e8938f694e73310e5faf45fbd9f2578 SHA512 70304f8fe862988d4092dd37c5a66fdfec56c9cb2d62a78f2cdf365a0c629606c6fb9081dbdc7e68530d43894d1cb645d168db8f3f0c8a9999873afd9032ec52 WHIRLPOOL dbf26294a9d6eb4258a67c64844370f1423fa59210b306bc66ea53a902cbc564b1cd084b765759e93d7970df30417e6482dfbbf271dda8d387ef006837123ac3
 EBUILD gitlab-ce-8.11.0.ebuild 11703 SHA256 f95aa4a60c85da0155df6b989e343296eba23a6c2f12055c5f94bee53f5d9bc0 SHA512 6d1c7c3e3139d456a7b22431b326401a9b56e435000a02a572bfdbb52c5495e098b0406ab9b8051a2a901878e3a3a2c4332af9a0bf50ff1a36051f9436c1ddbe WHIRLPOOL bd92de9d5fda4a4b1802e814a55ea1e1a9848a9e085b9ad88ba108771dc68953156c8cecde64ef2250eba8f2b9568f73969460aa61c4901957d9b7771558ed9c
 EBUILD gitlab-ce-8.11.2.ebuild 11712 SHA256 02dd8184aa55060d9b36fefef46d2506f2516034fdff03837205ca152706f13f SHA512 cb14a84ba0e34f795a06f8947e222fb2fa1ee9a79d3d81bc527498e7ccbbb06ec5e26c56d39e0da30148e918397daaaca4337e732e8791994ed7aaf731cae185 WHIRLPOOL 63309d30e1e41db231f074fadef91fda5fc6d7dc0fa85339b64f4a6522d598c2b67b593f769e4ce70d2343607f6f42eee60614bf0556e2a4848a142c8d326fff
@@ -24,7 +24,7 @@ EBUILD gitlab-ce-8.11.3.ebuild 11712 SHA256 41be23427e3c7d550888eec40091d7e6f6c0
 EBUILD gitlab-ce-8.11.4.ebuild 11954 SHA256 1970a09040e9d4e924a187bf108dece607825fe62a2fed7a6202a8c24e878f15 SHA512 189157bd48f107fff5e7b476f4b103c40c81baf2620bd1bf5600547f66c3dfe4ad7aec4001422c4f69a49ba973fdff724d8868d0cbba9719bed4908f3bb60772 WHIRLPOOL 4f270f6251d4172c956492ac3f2d7a2041db4d5ec3b344f43af9f0d01fc8fd3274e225ecbd1d35128757ece050cd91db5db74629c377d553de2afcf015ce9c48
 EBUILD gitlab-ce-8.11.5.ebuild 11954 SHA256 1d064416cf453ac5e66dcb39c332db6ef01636f647dafd80faeb357f61a8c365 SHA512 927327684f3914962f2f48c74dd620cc0e8c1fac0ba5eb00e0411f61189ab8bf77bcc3ee9aa3be533e354c0375935ba981d276487faa965e2159e509d00c5468 WHIRLPOOL f6114dfed971973a89a350637818c9546554aac04fc637b276b37411e3e6b425e254dd8c2bb05019893c07f24deefe35d08a6234b2be4c06c1a6f56d39f21d33
 EBUILD gitlab-ce-8.11.6.ebuild 11954 SHA256 2752b8057eac0cd77e74bc7f323a6ab0037c9d70559a637f15e30f11ba244b65 SHA512 a649871bc5594aac19ac816a53a164edde1c7a70933c777489ee45c98515099c2748dd2a65fb433481ecd69ed9fd1f386e2f137b8cb9761453252ceab362e4cd WHIRLPOOL b623e4a6ed638c42672f0f8cde252681c89b92831d8bfb687a8ab7bb374335552586b77bd7066a898ed6612715732f538b29acbe874bd31e72c63f49e54deb00
-EBUILD gitlab-ce-8.12.0_rc4.ebuild 11937 SHA256 4f120ce45ff3181f7a28cb279d94d9890cd6d221cf5f9e86f7c963d27f213ff4 SHA512 f3090a64ab9352a236d105cb1f2a7d3cf4e4d64778134ffb10056bb6d74c56d37ca0412776678672c822e7af4d73d6095e25e451a0d820711699adea7abeb59e WHIRLPOOL 1faf0a658927b9a534152797054b39dab6b5e092bd1df6f9ebab9cd8d6a1844a8054c4964123942a96f4b1b59a9d37fc0ee0c543e3f4f9559e9ec59778a25c9b
-EBUILD gitlab-ce-9999.ebuild 11892 SHA256 65ecf92d389cc0175716d9bb0b65f6dcef7fb9be80801a5ddfdd5ab86d8905ca SHA512 c0340c00d5668f1ffcd70c17f0436b2f8d10fed7d30e04cd0e611e5254139acd4d8706999b17db58549a06ad7b5e9b706358744da13da942067d7a2319b1a4ce WHIRLPOOL f35e98533e5bc0fb83c4c9f9efd7525da6acc9c53de7eb623d09386aac05763310c0ad3b9abcf58b620bb2aa4099c5eb3a0a7aa0dca26a729eab52eb152ec7e7
-MISC ChangeLog 6841 SHA256 5e5fd37fb8a0cb5b67dc2c782cf4aeabfc7c145cc8ed59f0de172fe009f7e641 SHA512 32d04af3d81a30e2ad271d7fbfc15cf377c40b8bf3f106207970e2272efb19e1657e6587f21becf91ee8ceab9cb0c80022fa894bb79013c16c054dd21b11c164 WHIRLPOOL ac7ed9bde2a118311ebddf3a88089b4ce4ecd25f5a4feb243555014aa6aa0dfe07bd909e4b57141f8a4d253ec6a1d005b20a2c7a3e4e8960b30d49b179c0f2be
+EBUILD gitlab-ce-8.12.0_rc6.ebuild 11937 SHA256 bfa85ccd3fa55a8950eb7ebc031440fcd9d3729cc722a8d353a1dc349e68f4b7 SHA512 2d5c6c8c01fc6e062a82507699bd796d2aca0fbbbd6ac900ab31eef5c8fd627eee62f5b49ea8dacdfbbefaa5675cece97067c0c9752fb4f06545935478c6b8c8 WHIRLPOOL 2940994a2d5905a96952a9f7a1f57007b5207d03a1511082d6381a76270ac4512867e54fdd26bb9216fa32ffc3cfbd2a672f875c19f423f5a3ef480159bb3fa4
+EBUILD gitlab-ce-9999.ebuild 11892 SHA256 3e4cda7670cb343d61d63debf9ec390cb120dc7ffec8365cbee111ab50a06390 SHA512 b3d441e4969266e20d9c9391ffd731df2d7d316d798bf9dc7905f29c18f62dcd2ec63291e640b138a3d4880a4f639bcc98003eadcb3c49c38fedd3ad94f32901 WHIRLPOOL 8ef66ad909c9496facd3c56523a2ddf419bf4dfadd41b81ebdfaef3560f7ad53d9f67f655b3014e997198dc43c362c59d0d7d24decc7da015c66d63acedff254
+MISC ChangeLog 7132 SHA256 17ff36af26618680d517a40aa93205b909452d08eed211f1bba1320b00a33a1d SHA512 8a1b86bfccec235d03be373ba8a198cd824f12e2e335cf2b477ce887f8f7d454808574ec41a2f98483d4fb260933de40091a397d1ce9146f05d3b38c15af16bc WHIRLPOOL 756cafb79713b742756b10d0083e7c96e3e0fcf090ad998705681ce3929391d0b5719d49b3989f914a2e0c41d8a136d8dc41bd641a5dccf13a854b3977d89121
 MISC metadata.xml 545 SHA256 1b7fc44d811e1ab7638fe4a40253f49d5f1071872d3020c22c4f67662750cb2f SHA512 86f47d297892bccfefa087d93936296f5647993a9ec8e3f47907a6859cbf385e5bc6f00502d7836c9e8d9efef2b6725bf145b0150924c2082b2bd164469ef6ea WHIRLPOOL 6bfb8a55684d68c8bfa6e025a0be965f7b815394ee0896dd2a13cfb524e3cf3f3149acc9072897e30a1842060389576aac07ea8beb4a8b0bfc3e8eab3723f2a1
