@@ -54,7 +54,7 @@ COMMON_DEPEND="
 	${GEMS_DEPEND}
 	>=dev-vcs/gitlab-shell-3.5.0
 	>=dev-vcs/git-2.7.4
-	>=dev-vcs/gitlab-workhorse-0.8.1
+	>=dev-vcs/gitlab-workhorse-0.8.2
 	kerberos? ( !app-crypt/heimdal )
 	rugged_use_system_libraries? ( net-libs/http-parser dev-libs/libgit2:0/24 )"
 DEPEND="
