@@ -1,3 +1,10 @@
+*gitlab-ce-8.12.0_rc6 (21 Sep 2016)
+
+  21 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.12.0_rc6.ebuild,
+  -gitlab-ce-8.12.0_rc4.ebuild, gitlab-ce-9999.ebuild:
+  www-apps/gitlab-ce:  - updated ebuild fot 8.12.0-rc4 to 8.12.0-rc6 - updated
+  dependencies in 8.12.0-rc6 and 9999
+
 *gitlab-ce-8.12.0_rc4 (18 Sep 2016)
 
   18 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.12.0_rc4.ebuild,
